changed button name

--- a/hello.html
+++ b/hello.html
@@ -56,7 +56,7 @@
 			<button>And push the Button! Good luck </button>
 		</form>
 		<div id="bottom">
-			this is the <span class="name">bottom</span> of my web page.
+			this is the <span class="name">big bottom</span> of my changed web page.
 		</div>
 		
 	</body>
